--- a/packages/components/s-code-example-component/src/css/s-code-example.css
+++ b/packages/components/s-code-example-component/src/css/s-code-example.css
@@ -1,65 +1,64 @@
+@sugar.highlightjs.theme;
+
 :host {  
     display: block;
-
-    &[toolbar-position="nav"] {
-        position: relative;
-    }
+    border-radius: sugar.theme(ui.code.borderRadius);
+    border: sugar.color(ui, border) solid 1px;
+    overflow: hidden;
 }
 
-      .s-code-example__slot {
-        display: none;
+  .s-code-example__slot {
+    display: none;
+  }
+
+  .s-code-example__nav {
+    position: relative;
+  }
+
+  .s-code-example__tabs {
+    display: flex;
+    list-style: none;
+    border-bottom-left-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+  }
+  .s-code-example__tab {
+
+  }
+
+  .s-code-example__content {
+    overflow: hidden;
+    position: relative;
+  }
+
+  .s-code-example__code {
+    display: none;
+    border-top-left-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+    overflow: hidden;
+    
+    &[active] {
+      display: block;
+    }
+  }
+
+  .s-code-example__toolbar {
+    position: absolute;
+    right: sugar.space(20);
+    top: sugar.space(20);
+    z-index: 10;
+    
+    & > * {
+      font-size: 20px;
+      opacity: 0.5;
+
+      &:hover {
+        opacity: 1;
       }
+    }
+  }
 
-      .s-code-example__nav {
-      }
-
-      .s-code-example__tabs {
-        display: flex;
-        list-style: none;
-        border-bottom-left-radius: 0 !important;
-        border-bottom-right-radius: 0 !important;
-      }
-      .s-code-example__tab {
-
-      }
-
-      .s-code-example__content {
-        overflow: hidden;
-
-        .s-code-example[toolbar-position="content"] & {
-          position: relative;
-        }
-      }
-
-      .s-code-example__code {
-        display: none;
-        border-top-left-radius: 0 !important;
-        border-top-right-radius: 0 !important;
-        line-height: 0;
-        overflow: hidden;
-        
-        &[active] {
-          display: block;
-        }
-      }
-
-      .s-code-example__toolbar {
-        
-        position: absolute;
-        top: sugar.space(20); right: sugar.space(20);
-        z-index: 10;
-
-        & > * {
-          font-size: 20px;
-          opacity: 0.5;
-
-          &:hover {
-            opacity: 1;
-          }
-        }
-
-        s-code-example[toolbar-position="nav"] & {
-          top: sugar.space(10);
-          right: sugar.space(10);
-        }
-      }
+  [toolbar-position="nav"] .s-code-example__toolbar {
+      right: sugar.space(20);
+      top: 50%;
+      transform: translate(0, -50%);
+    }
