--- a/packages/websites/coffeekraken-io/src/css/index.css
+++ b/packages/websites/coffeekraken-io/src/css/index.css
@@ -62,7 +62,7 @@ a:active {
 
 .s-theme--dark,
 .s-tooltip:not(.s-theme--dark .s-tooltip) {
-  @sugar.theme(dark);
+  /* @sugar.theme(dark); */
 }
 
 [class*='s-btn'] {
