--- a/packages/websites/coffeekraken-io/src/views/pages/markdown/markdown.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/markdown/markdown.css
@@ -29,10 +29,13 @@
             font-weight: bold;
         }
 
-        .__toggle:before {
+        .__slug:before {
             content: '-';
+        }
+        .__toggle:before {
+            content: '│';
             font-weight: bold;
-            color: sugar.color(complementary);
+            color: sugar.color(accent);
         }  
 
     }
