--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -43,7 +43,7 @@ body {
         & > * {
             display: block;
             padding: sugar.space(10) sugar.space(20);
-            background: sugar.color(ui, border);
+            background: sugar.color(ui, background);
 
             &:first-child {
                 border-top-right-radius: sugar.border.radius();
@@ -56,6 +56,7 @@ body {
         }
         & > a:hover {
              background: sugar.color(accent);
+             color: sugar.color(accent, foreground);
              transform: scale(1.1);
         }
     }
