--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -16,6 +16,13 @@ body {
         background-color: sugar.color(main, --darken 35);
     }
 
+    svg .main {
+        fill: sugar.color(main, text);
+    }
+    svg .accent {
+        fill: sugar.color(accent);
+    }
+
     version-selector {
         margin-left: sugar.space(10);
     }
