--- a/packages/components/s-side-panel-component/src/css/s-side-panel.css
+++ b/packages/components/s-side-panel-component/src/css/s-side-panel.css
@@ -5,6 +5,11 @@ s-side-panel {
     width: 100%;
     height: 100%;
     z-index: 9999;
+    pointer-events: none;
+
+    &[active] {
+        pointer-events: all;
+    }
 }
 
 .s-side-panel__overlay {
@@ -12,7 +17,7 @@ s-side-panel {
     top: 0; left: 0;
     z-index: 0;
     width: 100%; height: 100%;
-  
+
     [default-style] & {
         background: sugar.color(main, --alpha 0.3);
         transition: sugar.transition(default);
