--- a/packages/components/s-date-picker-component/index.html
+++ b/packages/components/s-date-picker-component/index.html
@@ -13,6 +13,6 @@
 
             webcomponent();
         </script>
-        <s-date-picker name="my-date-picker" default-style />
+        <s-date-picker class="s-ui--accent" name="my-date-picker" default-style />
     </body>
 </html>
