--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 98px;
+    padding-top: 100px;
 }
 
 #header {
@@ -7,11 +7,17 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 100;
+    z-index: 999;
+    height: 100px;
+    display: flex;
+    align-items: center;
     background: sugar.color(main, 100);
-    padding: sugar.space(20) 0;
     transition: padding ease-in-out 0.2s;
     @sugar.depth (10);
+
+    .s-container {
+        flex-grow: 1;
+    }
 
     @sugar.theme.when (dark) {
         background-color: sugar.color(main, --darken 35);
@@ -24,12 +30,8 @@ body {
         fill: sugar.color(accent);
     }
 
-    version-selector {
-        margin-left: sugar.space(10);
-    }
-
     .s-tooltip {
-        padding: sugar.space(10);
+        padding: sugar.space(20);
     }
 
     .__subnav {
@@ -39,7 +41,7 @@ body {
 
         & > * {
             display: block;
-            padding: sugar.space(10) sugar.space(20);
+            padding: sugar.space(20) sugar.space(30);
             background: sugar.color(ui, background);
 
             &:first-child {
@@ -54,7 +56,7 @@ body {
         & > a:hover {
             background: sugar.color(accent);
             color: sugar.color(accent, foreground);
-            transform: scale(1.1);
+            /* transform: scale(1.1); */
         }
     }
 }
