--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -59,6 +59,21 @@ body {
             /* transform: scale(1.1); */
         }
     }
+
+    .__subnav-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        backdrop-filter: blur(10px);
+        opacity: 0;
+        transition: sugar.transition(fast);
+
+        body.subnav-active & {
+            opacity: 1;
+        }
+    }
 }
 
 #settings .s-side-panel__container {
