--- a/packages/websites/coffeekraken-io/src/views/pages/doc/doc.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/doc/doc.css
@@ -4,6 +4,10 @@
         margin-right: 0.2em;
     }
 
+    img {
+        max-width: 100%;
+    }
+
     .s-avatar {
         border: solid 2px sugar.color(accent);
     }
