--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -34,29 +34,131 @@ body {
         padding: sugar.space(20);
     }
 
+    @keyframes subnav-bkg {
+        from {
+            background-position: 0 0;
+        }
+        50% {
+            background-position: 100vw 0;
+        }
+        to {
+            background-position: 0 0;
+        }
+    }
+
     .__subnav {
+        position: absolute;
+        padding: sugar.padding(50) 0;
+        top: calc(100% + 20px);
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100vw;
+        background-color: sugar.color(main, surface);
+
+        background-position: 0 0;
+        background-size: cover;
         text-align: left;
-        @sugar.border.radius;
-        font-size: 1rem;
+        display: none;
+        animation: subnav-bkg 240s linear;
+        animation-fill-mode: both;
+        animation-iteration-count: infinite;
 
-        & > * {
+        @sugar.theme.when (dark) {
+            background-image: url('/src/img/discord-illustration-bkg.png');
+        }
+
+        &:before {
+            z-index: -1;
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            opacity: 0.5;
+            transition: sugar.transition(fast);
+            background-color: sugar.color(main, surface);
+            pointer-events: none;
+        }
+    }
+    [active] .__subnav {
+        display: block;
+    }
+
+    .__subnav-chapters {
+        padding: 0 sugar.padding(50) 0 0;
+
+        s-activate {
             display: block;
-            padding: sugar.space(20) sugar.space(30);
-            background: sugar.color(ui, background);
+        }
 
-            &:first-child {
-                border-top-right-radius: sugar.border.radius();
-                border-top-left-radius: sugar.border.radius();
-            }
-            &:last-child {
-                border-bottom-right-radius: sugar.border.radius();
-                border-bottom-left-radius: sugar.border.radius();
+        li:hover,
+        s-activate[active] li {
+            background-color: sugar.color(accent);
+            color: sugar.color(accent, foreground);
+        }
+        li:hover {
+            background-color: sugar.color(accent, --alpha 0.5);
+        }
+
+        li {
+            padding: sugar.padding(20) sugar.padding(30);
+            border-radius: sugar.theme(ui.default.borderRadius);
+        }
+    }
+
+    .__subnav-stories {
+        position: relative;
+
+        &:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: calc(sugar.padding(50) * -1);
+            width: 400px;
+            height: calc(100% + sugar.padding(50) * 2);
+            background: linear-gradient(90deg, sugar.color(main, background), sugar.color(main, --alpha 0));
+        }
+    }
+
+    .__subnav-story {
+        width: 100%;
+        padding: 0 sugar.padding(50);
+
+        ul {
+            padding-right: sugar.padding(50);
+
+            li {
+                padding: sugar.padding(20) sugar.padding(30);
+                border-radius: sugar.theme(ui.default.borderRadius);
+
+                &:hover {
+                    background-color: sugar.color(complementary);
+                    color: sugar.color(complementary, foreground);
+                }
             }
         }
-        & > a:hover {
-            background: sugar.color(accent);
-            color: sugar.color(accent, foreground);
-            /* transform: scale(1.1); */
+
+        .__icon {
+            --subnav-stories-icon-fill: linear-gradient(45deg, sugar.color(accent), sugar.color(complementary));
+
+            svg {
+                fill: url(#header-shape-gradient) #fff;
+                filter: drop-shadow(0 0 20px rgb(0 0 0 / 0.4));
+            }
+
+            #header-shape-gradient {
+                --color-end: sugar.color(accent);
+                --color-start: sugar.color(complementary);
+            }
+        }
+    }
+    .__subnav-story {
+        display: none;
+        position: relative;
+
+        &[active] {
+            display: block;
         }
     }
 
@@ -72,6 +174,17 @@ body {
 
         body.subnav-active & {
             opacity: 1;
+        }
+
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: sugar.color(main, 0);
+            opacity: 0.1;
         }
     }
 }
