--- a/packages/components/s-code-example-component/src/css/s-code-example.css
+++ b/packages/components/s-code-example-component/src/css/s-code-example.css
@@ -10,6 +10,27 @@
 
 }
 
+s-code-example {
+    
+    &:not([ready]) {
+        > * {
+            display: block;
+        }
+
+        &:before {
+            display: block;
+            content: 'Loading example. Please wait...';
+            background: sugar.color(ui, surface);
+            color: sugar.color(ui, surfaceForeground);
+            padding: sugar.padding(40);
+
+            @sugar.depth (100);
+            @sugar.border.radius();
+        }
+    }
+
+}
+
   .s-code-example__slot {
     display: none;
   }
