--- a/packages/components/s-clipboard-copy-component/src/css/s-clipboard-copy.css
+++ b/packages/components/s-clipboard-copy-component/src/css/s-clipboard-copy.css
@@ -1,43 +1,45 @@
-.root {
+.s-clipboard-copy {
     display: inline-block;
-    width: 1em; height: 1em;
+    width: 1em;
+    height: 1em;
     position: relative;
     cursor: pointer;
 
-    &[state="pending"] {
+    &[state='pending'] {
         .icon-copy {
             opacity: 1;
         }
     }
-    &[state="copy"] {
+    &[state='copy'] {
         .icon-copy {
             opacity: 1;
         }
     }
-    &[state="success"] {
+    &[state='success'] {
         color: sugar.color(success);
 
         .icon-success {
             opacity: 1;
         }
     }
-    &[state="error"] {
+    &[state='error'] {
         color: sugar.color(error);
 
         .icon-error {
             opacity: 1;
         }
     }
-}
 
-svg {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-    display: block;
-    width: 1em;
-    height: 1em;
-    background-size:contain;
-    opacity: 0;
-    pointer-events: none;
+    svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: block;
+        width: 1em;
+        height: 1em;
+        background-size: contain;
+        opacity: 0;
+        pointer-events: none;
+    }
 }
