--- a/packages/components/s-clipboard-copy-component/src/css/s-clipboard-copy.css
+++ b/packages/components/s-clipboard-copy-component/src/css/s-clipboard-copy.css
@@ -5,6 +5,11 @@
     position: relative;
     cursor: pointer;
 
+    &:not([mounted]) > * {
+        opacity: 0.001;
+        pointer-events: none;
+    }
+
     &[state='pending'] {
         .icon-copy {
             opacity: 1;
