--- a/packages/components/s-date-picker-component/src/css/s-date-picker.css
+++ b/packages/components/s-date-picker-component/src/css/s-date-picker.css
@@ -1,5 +1,9 @@
 s-date-picker {
     display: inline-block;
+
+    &:not([mounted]) > * {
+        display: none;
+    }
 }
 .s-date-picker {
     display: flex;
