--- a/packages/components/s-range-component/index.html
+++ b/packages/components/s-range-component/index.html
@@ -28,7 +28,7 @@
             max="10"
             value="2"
             step="1"
-            class="s-ui--accent"
+            class="s-range s-ui--accent"
             target="#myCoolInput"
             tooltip
             style="width: 500px"
