--- a/packages/components/s-range-component/src/css/s-range.css
+++ b/packages/components/s-range-component/src/css/s-range.css
@@ -1,6 +1,10 @@
 s-range {
     display: block;
     width: 100%;
+
+    &:not([mounted]) > * {
+        display: none;
+    }
 }
 .s-range {
     display: flex;
