--- a/packages/components/s-side-panel-component/src/css/s-side-panel.css
+++ b/packages/components/s-side-panel-component/src/css/s-side-panel.css
@@ -11,6 +11,10 @@ s-side-panel {
     &[active] {
         pointer-events: all;
     }
+
+    &:not([mounted]) > * {
+        display: none;
+    }
 }
 
 .s-side-panel__overlay {
