--- a/packages/websites/coffeekraken-io/src/css/generic/s-code-example.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/s-code-example.css
@@ -3,25 +3,15 @@ s-code-example {
     @sugar.theme (dark);
     @sugar.depth (100);
     @sugar.border.radius();
-
-    &:not([ready]) {
-        > * {
-            display: block;
-        }
-
-        &:before {
-            display: block;
-            content: 'Loading example. Please wait...';
-            background: sugar.color(ui, surface);
-            color: sugar.color(ui, surfaceForeground);
-            padding: sugar.padding(40);
-
-            @sugar.depth (100);
-            @sugar.border.radius();
-        }
-    }
 }
 
 .s-code-example__toolbar {
     color: sugar.color(ui, text);
 }
+
+/* .s-until--mounted {
+    display: none;
+}
+*:not([mounted]) + .s-until--mounted {
+    display: block;
+} */
